# palautusrepositorio

./: README.md
viikko1/nhl-statistics-1/: .coverage
viikko1/nhl-statistics-1/src/: statistics_service.py
viikko1/nhl-statistics-1/src/tests/: statistics_service_test.py
viikko2/nhl-reader/src/: index.py  player.py
viikko2/poetry-web/: pyproject.toml
viikko2/poetry-web/src/: project.py  project_reader.py
viikko3/hello-robot/src/: counter.py  log.html  output.xml  report.html
viikko3/login-robot/: log.html  output.xml  report.html
viikko3/login-robot/src/services/: user_service.py
viikko3/login-robot/src/tests/: login.robot  register.robot
viikko3/web-login/src/: log.html  output.xml  report.html
viikko3/web-login/src/services/: user_service.py
viikko3/web-login/src/tests/: home.robot  login.robot  login_resource.robot  register.robot  resource.robot
viikko4/: retro.md
viikko4/viikko4/maksukortti-mock/src/tests/: kassapaate_test.py
viikko4/viikko4/verkkokauppa/src/: .coverage
viikko4/viikko4/verkkokauppa/src/tests/: kauppa_test.py
viikko5/int-joukko/src/tests/: int_joukko_test.py
viikko5/laskin/src/: kayttoliittyma.py
viikko5/tennis/src/: tennis_game.py
viikko6/: PULL.md
viikko6/query-language/src/: index.py  matchers.py  query.py  statistics.py
viikko6/query-language/src/tests/: matchers_test.py
viikko7/: referaatti.md
